Updated home page

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -54,7 +54,7 @@
                 <a href="./index.html">Home</a>
                 <a href="./directory.html" class="active">Directory</a>
                 <a href="./join.html">Join</a>
-                <a href="#">Discover</a>
+                <a href="./discover.html">Discover</a>
             </nav>
             <div id="theme" class="theme-toggle"></div>
         </header>
