--- a/project/index.html
+++ b/project/index.html
@@ -38,7 +38,7 @@
                     <img src="book2.jpg" alt="Book 2">
                     <p>Book Title 2</p>
                 </div>
-                <!-- More books can be added -->
+                <!-- More books -->
             </div>
         </section>
 
