--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,7 +54,7 @@
                 <a href="index.html" class="active">Home</a>
                 <a href="./directory.html">Directory</a>
                 <a href="./join.html">Join</a>
-                <a href="#">Discover</a>
+                <a href="./discover.html">Discover</a>
             </nav>
             <div id="theme" class="theme-toggle"></div>
         </header>
