--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <li><a href="./chamber/index.html" target="_blank">Chamber</a></li>
                     <li><a href="https://github.com/pessima-au" target="_blank">GitHub Profile</a></li>
                     <li><a href="https://www.linkedin.com/in/albert-pessima" target="_blank">LinkedIn</a></li>
+                    <li><a href="./project/siteplan.html">Project</a></li>
                 </ul>
             </nav>
         </header>
