minor typo update

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -46,7 +46,7 @@
                 <h2>Scenarios</h2>
                 <ol>
                     <li>Where can I find recommendations for the best eBooks in my favorite genre?</li>
-                    <li>Where can I find interest books to read free of charge?</li>
+                    <li>Where can I find interesting books to read free of charge?</li>
                 </ol>
             </section>
 
