completed discover page

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -27,6 +27,8 @@
         <link rel="stylesheet" href="./styles/normalize.css">
         <link rel="stylesheet" href="styles/base.css" media="print" onload="this.onload=null;this.media='all';">
         <link rel="stylesheet" href="styles/large.css" media="print" onload="this.onload=null;this.media='all';">
+        <link rel="stylesheet" href="styles/discover.css" media="print" onload="this.onload=null;this.media='all';">
+        
 
         <link rel="preload" href="./images/slcc-logo.webp" as="image">
         <script src="./scripts/theme.js" defer></script>
