--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,7 +34,7 @@
         <script src="./scripts/theme.js" defer></script>
         <script src="./scripts/discover.js" type="module"></script>
 
-        <title>Join the Sierra Leone Chamber of Commerce</title>
+        <title>Sierra Leone Chamber of Commerce - Explore Sierra Leone</title>
     </head>
 
     <body>
@@ -59,6 +59,7 @@
             <div id="theme" class="theme-toggle"></div>
         </header>
         <main>
+            <h1>Explore Sierra Leone</h1>
            <div id="places"></div>
            <aside class="sidebar">
             <button class="close-button">❌</button>
