--- a/project/index.html
+++ b/project/index.html
@@ -4,59 +4,74 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="WDD 231 - Web Frontend Development 1, Albert Pessima, eBook reader hop page.">
+        <meta name="author" content="Course Home Page">
         <title>E-Read Haven</title>
-        <link rel="stylesheet" href="styles.css"> 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Lato&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap"
+            rel="stylesheet">
+        <link rel="stylesheet" href="./styles/styles.css">
     </head>
 
     <body>
         <header>
-            <nav>
-                <div class="logo">E-Read Haven</div>
+            <a class="logo" href="index.html"><img src="./images/ebook_logo.png" alt="E-Book Haven logo"></a>
+            <nav class="navigation">
                 <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#books">Books</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="#featured-books">Books</a></li>
                     <li><a href="#community">Community</a></li>
-                    <li><a href="#contact">Contact</a></li>
                 </ul>
-                <input type="text" placeholder="Search books..." class="search-bar">
             </nav>
-        </header>
-
-        <section id="hero">
-            <h1>Welcome to E-Read Haven</h1>
-            <p>Your digital library for exploring amazing eBooks.</p>
-        </section>
-
-        <section id="books">
-            <h2>Book Collection</h2>
-            <div class="book-grid">
-                <div class="book-item">
-                    <img src="book1.jpg" alt="Book 1">
-                    <p>Book Title 1</p>
-                </div>
-                <div class="book-item">
-                    <img src="book2.jpg" alt="Book 2">
-                    <p>Book Title 2</p>
-                </div>
-                <!-- More books -->
+            <div class="search-container">
+                <button class="search-button">🔍</button>
+                <input type="text" placeholder="Search books..." class="search-input">
+               
             </div>
-        </section>
+            <button id="menu-toggle" aria-label="Toggle navigation menu"></button>
+            
+        </header>
+        <main>
+            <section id="hero">
+                <h1>Welcome to eRead Haven</h1>
+                <p>Your digital library for exploring amazing eBooks.</p>
+            </section>
+            <hr>
 
-        <section id="recommendations">
-            <h2>Recommended Books</h2>
-            <p>Discover top picks from our community.</p>
-        </section>
+            <section id="featured-books">
+                <h2>Book Collection</h2>
+                <div class="book-grid">
+                    <div class="book-item">
+                        <img src="./images/book1.jpg" alt="Book 1">
+                        <p>Book Title 1</p>
+                    </div>
+                    <div class="book-item">
+                        <img src="./images/book2.jpg" alt="Book 2">
+                        <p>Book Title 2</p>
+                    </div>
+                    <button class="load-more">Load More</button>
+                </div>
+            </section>
 
-        <section id="community">
-            <h2>Community Forum</h2>
-            <p>Join discussions and share your thoughts on books.</p>
-        </section>
+            <hr>
 
-        <section id="testimonials">
-            <h2>User Reviews</h2>
-            <p>See what readers are saying about our collection.</p>
-        </section>
+            <section id="recommendations">
+                <h2>Recommended Books</h2>
+                <p>Discover top picks from our community.</p>
+            </section>
 
+            <section id="community">
+                <h2>Community Forum</h2>
+                <p>Join discussions and share your thoughts on books.</p>
+            </section>
+
+            <section id="testimonials">
+                <h2>User Reviews</h2>
+                <p>See what readers are saying about our collection.</p>
+            </section>
+        </main>
         <footer>
             <p>&copy; 2025 E-Read Haven. All rights reserved.</p>
         </footer>
