--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li><a href="https://github.com/pessima-au" target="_blank">GitHub Profile</a></li>
                     <li><a href="https://www.linkedin.com/in/albert-pessima" target="_blank">LinkedIn</a></li>
                     <li><a href="./project/siteplan.html">Project</a></li>
-                    <li><a href="./project/index.html"></a></li>
+                    <li><a href="./project/index.html">EBook App</a></li>
                 </ul>
             </nav>
         </header>
