--- a/project/community.html
+++ b/project/community.html
@@ -9,8 +9,8 @@
         <meta property="og:title" content="Web Frontend Development Course Project Page">
         <meta property="og:type" content="website">
         <meta property="og:image"
-            content="https://raw.githubusercontent.com/pessima-au/wdd231/main/chamber/images/freetown.webp">
-        <meta property="og:url" content="https://pessima-au.github.io/wdd231/chamber/directory.html">
+            content="https://raw.githubusercontent.com/pessima-au/wdd231/main/project/images/ebook_logo.png">
+        <meta property="og:url" content="https://pessima-au.github.io/wdd231/project/index.html">
         <title>E-Read Haven</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,8 +18,10 @@
             href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Lato&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap"
             rel="stylesheet">
         <link rel="stylesheet" href="./styles/styles.css">
-        <link rel="stylesheet" href="./styles/reader.css">
-        <script src="./scripts/reader.js" defer></script>
+        <!-- <script src="./scripts/script.js" defer></script> -->
+        <script src="scripts/community.js" defer></script>
+        <!-- <link rel="stylesheet" href="styles/library.css"> -->
+         <link rel="stylesheet" href="styles/community.css">
     </head>
 
     <body>
@@ -30,16 +32,23 @@
             <nav class="navigation">
                 <a href="index.html">Home</a>
                 <a href="library.html">Library</a>
-                <a href="community.html">Community</a>
+                <a href="community.html" class="active">Community</a>
             </nav>
             <div class="search-container">
                 <button class="search-button">🔍</button>
                 <input type="text" placeholder="Search books..." class="search-input">
             </div>
         </header>
-        <h1>Book Reader</h1>
-        <main id="book-container">
-            <p>Loading book details...</p>
+        <main>
+            <h1>Join the conversation</h1>
+            <p class="p1">Discuss your favourite books, share insigths and connect woth fellow readers.</p>
+<hr>
+            <div id="community-container">
+                <h2>Discussion Boards</h2>
+                <div id="community"></div>
+                <hr>
+            </div>
+           
         </main>
         <footer>
             <p>&copy; 2025 E-Read Haven. All rights reserved.</p>
